agregue el doctype a mi index.htmal

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+<!DOCTYPE html> 
 <header>
-	<h1> Juárez González luis Angel </h1>
+	<h1> Juï¿½rez Gonzï¿½lez luis Angel </h1>
 	<section>
 		<p>Calle Tarango mz 1 lt7</p>
 		<p>55-84-98-79-68</p>
@@ -16,7 +17,7 @@
 			<P>julio 2017 a agosto 2017</p>
 		</article>
 		<article>	
-	 		<h3>Ayudante de albañileria</h3> 	
+	 		<h3>Ayudante de albaï¿½ileria</h3> 	
 			<p>mayo 2016 a agosto 2016</p>
 		</article>
 		<article>
@@ -46,8 +47,8 @@
 	<h5>Habilidades</h5>
 
 			<ul>
-				<li>Inglés (certificacion de la universidad de Cambridge)</li>
-				<li>Computación básico(microsoft office</li>
+				<li>Inglï¿½s (certificacion de la universidad de Cambridge)</li>
+				<li>Computaciï¿½n bï¿½sico(microsoft office</li>
 			</ul>
  
 
